# instantstyle-plus-fork

./: create_symlinks.sh  infer_style.py  inversion.py  pyproject.toml
src/: config.py
src/metrics/: metric_util.py
src/pipes/: sd_inversion_pipeline.py  sdxl_inversion_pipeline.py
src/utils/: enums_utils.py
src_fixed/instantstyle_plus/: eunms.py  infer_style.py  inversion.py  pipeline_controlnet_sd_xl_img2img.py  renoise_inversion.py
src_fixed/instantstyle_plus/metrics/: lpips.py  metric_util.py
src_fixed/instantstyle_plus/pipes/: sd_inversion_pipeline.py  sdxl_inversion_pipeline.py
src_fixed/instantstyle_plus/schedulers/: ddim_scheduler.py  euler_scheduler.py  lcm_scheduler.py
src_fixed/instantstyle_plus/utils/: enums_utils.py  images_utils.py
