[project]
name = "instantstyle-plus"
version = "0.1.0"
description = "Fork of upstream instantstyle-plus"
dependencies = [
    "csd-score @ git+https://bw42@gitlab.com/bw42/csd_score_fork.git",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# There are modules in the project root (parallel to src)
py-modules = ["infer_style", "inversion", "pipeline_controlnet_sd_xl_img2img"]
# Tell setuptools where packages live
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
# Tell it to find packages under src/
where = ["src"]  
