[project]
name = "instantstyle-plus"
version = "0.1.0"
description = "Fork of upstream instantstyle-plus"
dependencies = [
    "csd-score @ git+https://bw42@gitlab.com/bw42/csd_score_fork.git",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src_fixed"}
packages = ["myproject"]
